// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chaining form with css 1`] = `
Object {
  "map": undefined,
  "name": "17d7cf0",
  "next": undefined,
  "styles": "
        width: 18rem;
      ",
}
`;

exports[`Chaining form with plain object 1`] = `
Object {
  "map": undefined,
  "name": "m3h2rj",
  "next": undefined,
  "styles": "width:18rem;",
}
`;

exports[`Compact form with plain object 1`] = `
Object {
  "map": undefined,
  "name": "1mcmhjb",
  "next": undefined,
  "styles": "width:100%;background:red;@media(min-width:20rem){width:18rem;}@media(min-width:28rem){width:24rem;background:blue;}@media(min-width:36rem){width:32rem;}@media(min-width:48rem){width:44rem;}@media(min-width:60rem){width:54rem;background:green;}@media(min-width:75rem){width:72rem;}",
}
`;

exports[`Misc usage with customized min-height 1`] = `
Object {
  "map": undefined,
  "name": "1i86alf",
  "next": undefined,
  "styles": "@media(min-height:640px){width:100%;}",
}
`;

exports[`Misc usage with customized min-width 1`] = `
Object {
  "map": undefined,
  "name": "ccf86",
  "next": undefined,
  "styles": "@media(min-width:640px){width:100%;}",
}
`;

exports[`Misc usage with customized unitless min-height 1`] = `
Object {
  "map": undefined,
  "name": "4qmkok",
  "next": undefined,
  "styles": "@media(min-height:40rem){width:100%;}",
}
`;

exports[`Misc usage with customized unitless min-width 1`] = `
Object {
  "map": undefined,
  "name": "sk8x50",
  "next": undefined,
  "styles": "@media(min-width:40rem){width:100%;}",
}
`;

exports[`Single-media form with additional height constraint 1`] = `
Object {
  "map": undefined,
  "name": "ztzb64",
  "next": undefined,
  "styles": "@media(min-width:20rem) and (min-height:640px){width:18px;}",
}
`;

exports[`Single-media form with additional unitless height constraint 1`] = `
Object {
  "map": undefined,
  "name": "1ktezg3",
  "next": undefined,
  "styles": "@media(min-width:20rem) and (min-height:40rem){width:18px;}",
}
`;

exports[`Single-media form with multiple plain objects 1`] = `
Object {
  "map": undefined,
  "name": "18t2b45",
  "next": undefined,
  "styles": "@media(min-width:20rem){width:18px;font-size:16px;}",
}
`;

exports[`Single-media form with multiple plain objects with a mixed of unit mode 1`] = `
Object {
  "map": undefined,
  "name": "199dyzj",
  "next": undefined,
  "styles": "@media(min-width:20rem){width:240px;font-size:16px;}",
}
`;

exports[`Single-media form with multiple plain objects with mixed units 1`] = `
Object {
  "map": undefined,
  "name": "zcnrwc",
  "next": undefined,
  "styles": "@media(min-width:20rem){width:240px;font-size:1rem;}",
}
`;

exports[`Single-media form with tagged template literal 1`] = `
Object {
  "map": undefined,
  "name": "et70wo",
  "next": undefined,
  "styles": "@media(min-width:20rem){width: 18rem;}",
}
`;

exports[`Single-property form with number of argument fewer than that of breakpoints 1`] = `
Object {
  "map": undefined,
  "name": "1qtyuct",
  "next": undefined,
  "styles": "width:18rem;@media(min-width:28rem){width:24rem;}@media(min-width:36rem){width:32rem;}@media(min-width:48rem){width:44rem;}",
}
`;

exports[`Single-property form with number of argument more than that of breakpoints 1`] = `
Object {
  "map": undefined,
  "name": "1pi0qkl",
  "next": undefined,
  "styles": "width:18rem;@media(min-width:28rem){width:24rem;}@media(min-width:36rem){width:32rem;}@media(min-width:48rem){width:44rem;}@media(min-width:60rem){width:54rem;}@media(min-width:75rem){width:72rem;}",
}
`;
